--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Martin</title>
         <link rel="stylesheet" href="/assets/style4home.css" />
+        <link rel="icon" href="/assets/favicon.ico" />
     </head>
     <body>
         <!-- Background Decoration -->
