--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Login Page</title>
         <link rel="stylesheet" href="/assets/style5login.css" />
+        <link rel="icon" href="/assets/favicon.ico" />
     </head>
 
     <body>
