--- a/views/product.html.twig
+++ b/views/product.html.twig
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Products</title>
         <link rel="stylesheet" href="/assets/style2user.css" />
+        <link rel="icon" href="/assets/favicon.ico" />
     </head>
     <body class="main-body">
         <div class="container">
