--- a/views/transactionCreate.html.twig
+++ b/views/transactionCreate.html.twig
@@ -6,6 +6,7 @@
         <title>Transaction Create</title>
         <link rel="stylesheet" href="/assets/style.css" />
         <link rel="stylesheet" href="/assets/style2user.css" />
+        <link rel="icon" href="/assets/favicon.ico" />
     </head>
     <body class="main-body">
         <div class="container">
